tests/valid_inputs/if_else.cpp
// test if else

int main() {
	bool b = false;
	if(b)
		return -1;
	else
		return 42;
}
