tests/invalid_inputs/sema/fo_exact_better_than_def.cpp
// ambiguous

int foo(int a) {
	return a;
}

int foo(int a, int b = 10) {
	return a+b;
}

int main() {
	return foo(42);
}
